parallelize ScreenComposer layer renderer; merge in sequence. Add isDirty Flag to Bufferable and Scannables; if pipeline did not have dirty buffers, no pipeline layer merge and FrameBuffer switch will be done; save a lot CPU